# fiap-ds-mlops-9dtsr-credit-scoring

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml  teste_model.py
.dvc/: config
models/: model_metadata.json
notebooks/: data-processing.ipynb  model-development.ipynb
