[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fiap_ds_mlops_9dtsr_credit_scoring"
version = "0.0.1"
description = "Projeto Final QuantumFinance"
authors = [
  { name = "Raphael-Joao-Mauricio-Eduardo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["fiap_ds_mlops_9dtsr_credit_scoring"]
force_sort_within_sections = true


